.k8s/backend/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
  template:
    metadata:
      labels:
        app: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
        git/branch: ${BRANCH_NAME}
        git/commit: ${COMMIT}
        gitlab/job: "${JOB_ID}"
    spec:
      containers:
        - image: ${IMAGE_NAME}:${IMAGE_TAG}
          name: ${K8S_PROJECT}-${CONTEXT}
          ports:
            - containerPort: ${PORT}
          livenessProbe:
            httpGet:
              path: /
              port: ${PORT}
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: ${PORT}
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          #

          env: []
