.k8s/backend/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
  labels:
    app: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
    git/branch: ${BRANCH_NAME}
    git/commit: ${COMMIT}
    gitlab/job: "${JOB_ID}"
spec:
  selector:
    app: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
  ports:
    - port: ${PORT}
      name: ${CONTEXT}
