.k8s/backend/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
  labels:
    app: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
    git/branch: ${BRANCH_NAME}
  annotations:
    git/commit: ${COMMIT}
    gitlab/job: "${JOB_ID}"
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: ${API_HOST}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${K8S_PROJECT}-${CONTEXT}-${BRANCH_HASH}
              servicePort: ${PORT}

#

  tls:
    - secretName: ${CERTIFICATE_NAME}-secret
